Actualiza el contacto

--- a/contacto.html
+++ b/contacto.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1> correo: cedillo2010@gmail.com </h1>
-       <p> Lider de proyecto </p>
+       <p> Lider de proyecto - PMP </p>
 </body>
 </html>
